// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appointments Component renders 1`] = `
<h1
  class="heading"
>
  BOOK A BILLIONAIRE
</h1>
`;

exports[`Appointments Component renders 2`] = `
<input
  class="form-child"
  placeholder="City"
  required=""
  type="text"
  value=""
/>
`;

exports[`Appointments Component renders 3`] = `
<select
  class="form-child"
  data-testid="select-tag"
  required=""
>
  <option
    disabled=""
    value=""
  >
    Billionaires List
  </option>
  <option
    value="1"
  >
    Ariel Camus
  </option>
  <option
    value="2"
  >
    Bill Gates
  </option>
  <option
    value="3"
  >
    Francoise Meyers
  </option>
  <option
    value="4"
  >
    Jack Ma
  </option>
</select>
`;

exports[`Appointments Component renders 4`] = `
<input
  class="form-child"
  data-testid="date-input"
  required=""
  type="date"
  value=""
/>
`;

exports[`Appointments Component renders 5`] = `
<button
  class="btn"
  type="submit"
>
  Book Now
</button>
`;

exports[`Missions Component renders 1`] = `
<h1
  class="heading"
>
  BOOK A BILLIONAIRE
</h1>
`;
